force-app/main/default/objects/Optimization_Threshold__mdt/Optimization_Threshold__mdt.object-meta.xml
<CustomObject>
    <label>Optimization Threshold</label>
    <pluralLabel>Optimization Thresholds</pluralLabel>
    <description>Tunable thresholds for the Optimization Agent's Health/Urgency classification and the deterministic decision engine, so these are configurable without an Apex deployment.</description>
</CustomObject>