force-app/main/default/objects/Optimization_Threshold__mdt/fields/Healthy_Max_Below_Median_Count__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Max_Below_Median_Count__c</fullName>
    <label>Healthy - Max Below Median Signal Count</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Maximum number of benchmark signals allowed below portfolio median, with delivery at/above goal, to still classify as Healthy.</description>
</CustomField>