force-app/main/default/objects/Optimization_Threshold__mdt/fields/Pacing_At_Risk_Below_Percent__c.field-meta.xml
<CustomField>
    <fullName>Pacing_At_Risk_Below_Percent__c</fullName>
    <label>Pacing At Risk Below Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Pacing percentage below which a line item is considered critically underdelivering, used by the deterministic decision engine to trigger a budget/pacing change suggestion.</description>
</CustomField>