force-app/main/default/objects/Optimization_Threshold__mdt/fields/Pacing_Healthy_At_Or_Above_Percent__c.field-meta.xml
<CustomField>
    <fullName>Pacing_Healthy_At_Or_Above_Percent__c</fullName>
    <label>Pacing Healthy At Or Above Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Pacing percentage at or above which delivery is considered on-track and no pacing-related change should be suggested.</description>
</CustomField>